--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,41 +1,19 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: " en " }}">
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
-{%- include head.html -%}
+  {%- include head.html -%}
 
-<body>
+  <body>
+    <div class="container">
 
-    {%- include header.html -%}
+      {%- include header.html -%}
 
-    <main class="page-content" aria-label="Content">
-        <div class="wrapper">
-
-            {%- include about.html -%}
-
-            {%- if site.data.projects.size > 0 -%}
-                {%- include projects.html -%}
-            {%- endif -%}
-
-            {%- if site.data.experience.size > 0 -%}
-                {%- include experience.html -%}
-            {%- endif -%}
-
-            {%- if site.data.education.size > 0 -%}
-                {%- include education.html -%}
-            {%- endif -%}
-
-            {%- include more.html -%}
-
-        </div>
+    <main>
+      {{ content }}
     </main>
 
     {%- include footer.html -%}
 
-    <a href="https://github.com/sproogen/resume-theme" target="_blank">
-      <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
-        alt="Fork me on GitHub">
-    </a>
-
-</body>
-
+    </div>
+  </body>
 </html>
